# animitta

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  build.sh  conanfile.py  cuterm.c  main.c  pencil.c  ppm_demo.c  pty_smoke.c  sdl_demo.c
.github/workflows/: release.yml
base/: geo.h  log.h
core/: pty.c  pty.h  screen.c  screen.h  vt.c  vt.h
